--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "dist/main.js",
   "dependencies": {
     "babel-polyfill": "^6.0.16",
+    "body-parser": "^1.15.2",
     "bufferutil": "^1.2.1",
+    "circular-json": "^0.3.0",
     "express": "^4.14.0",
     "pg": "^6.0.3",
+    "pg-hstore": "^2.3.2",
+    "pg-promise": "^5.2.6",
+    "sequelize": "^3.23.6",
     "soundcloud": "^3.1.2",
     "utf-8-validate": "^1.2.1",
     "ws": "^1.1.1"
