--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kzantow/soundcloud-new-groups.git"
+    "url": "git@github.org:one-synth-challenge/home.git"
+  },
+  "engines": {
+    "node": "6.2.1"
   },
   "scripts": {
     "start": "node server.js",
@@ -56,8 +59,5 @@
     "build-dev": "webpack --progress --colors",
     "prepublish": "npm run build",
     "webpack-profile": "webpack --profile --json"
-  },
-  "engines": {
-    "node": "6.2.1"
   }
 }
