--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "body-parser": "^1.15.2",
     "bufferutil": "^1.2.1",
     "circular-json": "^0.3.0",
+    "continuation-local-storage": "^3.1.7",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "formidable": "^1.0.17",
+    "multer": "^1.2.0",
     "pg": "^6.0.3",
     "pg-hstore": "^2.3.2",
     "pg-promise": "^5.2.6",
